# rust-api-client

./: .gitignore  Cargo.toml  README.md  sonar-project.properties
.github/workflows/: ci.yml  publish.yml
src/: lib.rs
src/api/: api_client.rs  api_client_tests.rs  mod.rs
src/models/: authtoken.rs  mod.rs
src/repository/: auth_repository.rs  auth_repository_tests.rs
src/service/: auth_service.rs  auth_service_tests.rs
tests/: integration_auth_flow.rs
