[package]
name = "rust-api-client"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_api_client"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"

[dev-dependencies]
httpmock = "0.7"
