[package]
name = "rust-api-client"
version = "1.0.0"
edition = "2024"
authors = ["Luis Carlos Carrillo (Luigimonsoft)"]
description = "A reusable REST client in Rust with authenticate"
license = "MIT"
readme = "README.md"
keywords = ["rest", "api", "client", "http", "rust"]
categories = ["asynchronous", "network-programming"]
repository = "https://github.com/Luigimonsoft/rust-api-client"

[lib]
name = "rust_api_client"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"

[dev-dependencies]
httpmock = "0.7"
